--- a/index.html
+++ b/index.html
@@ -40,41 +40,85 @@
         </div>
         <div class="right">
           <h1>FAQ</h1>
-          <div class="questions">
-            <h2>How many team members can I invite?</h2>
-            <p>
-              You can invite up to 2 additional users on the Free plan. There is
-              no limit on team members for the Premium plan.
-            </p>
-          </div>
-          <hr />
-          <div class="questions">
-            <h2>What is the maximum file upload size?</h2>
-            <p>
-              No more than 2GB. All files in your account must fit your allotted
-              storage space.
-            </p>
-          </div>
-          <hr />
-          <div class="questions">
-            <h2>How do I reset my password?</h2>
-            <p>
-              Click “Forgot password” from the login page or “Change password”
-              from your profile page. A reset link will be emailed to you.
-            </p>
-          </div>
-          <hr />
-          <div class="questions">
-            <h2>Can I cancel my subscription?</h2>
-            <p>
-              Yes! Send us a message and we’ll process your request no questions
-              asked.
-            </p>
-          </div>
-          <hr />
-          <div class="questions">
-            <h2>Do you provide additional support?</h2>
-            <p>
+          <div class="questions-container">
+            <div class="questions">
+              <div class="title">
+                <h2 class="question-heading">
+                  How many team members can I invite?
+                </h2>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow-icon"
+                  class="icon"
+                />
+              </div>
+
+              <p class="paragraph">
+                You can invite up to 2 additional users on the Free plan. There
+                is no limit on team members for the Premium plan.
+              </p>
+            </div>
+            <hr />
+            <div class="questions">
+              <div class="title">
+                <h2 class="question-heading">
+                  What is the maximum file upload size?
+                </h2>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow-icon"
+                  class="icon"
+                />
+              </div>
+              <p class="paragraph">
+                No more than 2GB. All files in your account must fit your
+                allotted storage space.
+              </p>
+            </div>
+            <hr />
+            <div class="questions">
+              <div class="title">
+                <h2 class="question-heading">How do I reset my password?</h2>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow-icon"
+                  class="icon"
+                />
+              </div>
+              <p class="paragraph">
+                Click “Forgot password” from the login page or “Change password”
+                from your profile page. A reset link will be emailed to you.
+              </p>
+            </div>
+            <hr />
+            <div class="questions">
+              <div class="title">
+                <h2 class="question-heading">Can I cancel my subscription?</h2>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow-icon"
+                  class="icon"
+                />
+              </div>
+
+              <p class="paragraph">
+                Yes! Send us a message and we’ll process your request no
+                questions asked.
+              </p>
+            </div>
+            <hr />
+            <div class="questions">
+              <div class="title"">
+              <h2 class="question-heading">
+                Do you provide additional support?
+              </h2>
+              <img
+                src="./images/icon-arrow-down.svg"
+                alt="arrow-icon"
+                class="icon"
+              />
+            </div>
+            <p class="paragraph">
               Chat and email support is available 24/7. Phone lines are open
               during normal business hours.
             </p>
