--- a/index.html
+++ b/index.html
@@ -104,22 +104,23 @@
             </div>
             <hr />
             <div class="questions">
-              <div class="title"">
-              <h2 class="question-heading">
-                Do you provide additional support?
-              </h2>
-              <img
-                src="./images/icon-arrow-down.svg"
-                alt="arrow-icon"
-                class="icon"
-              />
+              <div class="title">
+                <h2 class="question-heading">
+                  Do you provide additional support?
+                </h2>
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow-icon"
+                  class="icon"
+                />
+              </div>
+              <p class="paragraph">
+                Chat and email support is available 24/7. Phone lines are open
+                during normal business hours.
+              </p>
             </div>
-            <p class="paragraph">
-              Chat and email support is available 24/7. Phone lines are open
-              during normal business hours.
-            </p>
+            <hr />
           </div>
-          <hr />
         </div>
       </div>
     </main>
